# ghp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: test-install.sh
src/gh_pulse/: cli.py
src/ghp/: cli.py
tests/: test_cli.py  test_packaging.py
