[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghp"
version = "0.1.3"
description = "Stateless GitHub activity summary — compact, LLM-friendly output"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
ghp = "ghp.cli:main"

[dependency-groups]
dev = [
  "build",
]
