[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghp"
version = "0.1.4"
description = "Stateless GitHub activity summary — compact, LLM-friendly output"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.urls]
Homepage = "https://github.com/wakamex/ghp"
Source = "https://github.com/wakamex/ghp"

[project.scripts]
ghp = "ghp.cli:main"

[dependency-groups]
dev = [
  "build",
]
